--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
   },
   "dependencies": {
     "next": "11.0.1",
+    "next-seo": "^4.26.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "simple-react-lightbox": "^3.6.6"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "@types/simple-react-lightbox": "^3.6.0",
+    "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
     "typescript": "4.3.4"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
